--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "lastfm": "^0.9.2",
     "lob": "^3.9.0",
     "lusca": "^1.4.1",
+    "masonry-layout": "^4.2.0",
     "mongoose": "^4.6.6",
     "morgan": "^1.7.0",
     "multer": "^1.2.0",
