--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "fbgraph": "^1.3.0",
     "github": "^9.2.0",
     "instagram-node": "^0.5.8",
+    "keystone": "^4.0.0-beta.5",
     "lastfm": "^0.9.2",
     "lob": "^3.9.0",
     "lusca": "^1.4.1",
