--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^4.0.0",
     "keystone": "^4.0.0-beta.5",
     "lodash": "^4.17.4",
+    "moment": "^2.18.1",
     "pug": "^2.0.0-beta11"
   },
   "scripts": {
